[project]
name = "cart-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-astradb>=1.0.0",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "lxml>=6.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "selenium>=4.41.0",
    "streamlit>=1.54.0",
    "structlog>=25.5.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.41.0",
]
